FIX: Overflow problem with body

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -13,7 +13,6 @@ a {
 }
 
 body {
-  width: 100%;
   margin: 0;
   padding: 20px;
   background-color: #0ecdc070;
